# text_editor

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: Callbacks.cpp  Callbacks.h  EditorWindow.cpp  EditorWindow.h  Variables.h  callbacks.cpp  callbacks.h  main.cpp  variables.h
